nodes/mother/lab/weyland-platform/k8s/data-mesh/flink-session.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flink
  namespace: data-mesh
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: data-mesh-traefik-forward-auth@kubernetescrd
spec:
  tls:
    - hosts: [flink.weyland.lab]
      secretName: weyland-wildcard-tls
  rules:
    - host: flink.weyland.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: weyland-flink-rest, port: { number: 8081 } }
